2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation.
	* include/roboptim/core/plugin/cfsqp.hh: Here.

2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new test.
	* tests/Makefile.am: Compile new test.
	* tests/simple-2.cc: New.
	* tests/simple-2.stdout: New.
	* tests/testsuite.at: Run new test.

2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Re-enable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo.
	* tests/Makefile.am: Here.

2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute missing stdout file.
	* tests/Makefile.am: Here.

2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance test suite.
	* tests/Makefile.am: Compile new test.
	* tests/common.hh: Catch all standard exceptions.
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple-1.cc,
	* tests/simple.cc: Simplify test case.
	* tests/simple-1.stdout: New.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.
	* tests/testsuite.at: Run new test.

2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix bug in gradient transformation.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Disable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix a bug in CFSQP constraint handling.
	* src/roboptim-core-cfsqp-plugin.cc: Fix bug in CFSQP
	constraint handling.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix gradient check threshold.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Make gradient check a little less strict.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement copy constructor.
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/roboptim-core-cfsqp-plugin.cc: Add copy constructor.
